# pypocketbase

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
pypocketbase/: __init__.py  client.py
pypocketbase/models/: __init__.py  admin.py  auth.py  base.py  list_result.py  record.py
pypocketbase/services/: __init__.py  admin.py  record.py
pypocketbase/utils/: __init__.py  errors.py  params.py
